--- a/gwt-layout/pom.xml
+++ b/gwt-layout/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.gwtproject.layout</groupId>
   <artifactId>gwt-layout</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>HEAD-SNAPSHOT</version>
   <packaging>gwt-lib</packaging>
 
   <name>GWT Layout</name>
@@ -53,11 +53,11 @@
     <maven.source.plugin>3.2.1</maven.source.plugin>
     <maven.deploy.plugin>3.0.0-M1</maven.deploy.plugin>
 
-    <aria.version>1.0-SNAPSHOT</aria.version>
-    <animation.version>1.0-SNAPSHOT</animation.version>
-    <core.version>1.0-SNAPSHOT</core.version>
-    <dom.version>1.0-SNAPSHOT</dom.version>
-    <dom.style.definitions.version>1.0-SNAPSHOT</dom.style.definitions.version>
+    <aria.version>HEAD-SNAPSHOT</aria.version>
+    <animation.version>HEAD-SNAPSHOT</animation.version>
+    <core.version>HEAD-SNAPSHOT</core.version>
+    <dom.version>HEAD-SNAPSHOT</dom.version>
+    <dom.style.definitions.version>HEAD-SNAPSHOT</dom.style.definitions.version>
   </properties>
 
   <dependencies>
