--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>org.gwtproject.layout</groupId>
   <artifactId>gwt-layout-parent</artifactId>
 
-  <version>1.0-SNAPSHOT</version>
+  <version>HEAD-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
@@ -59,7 +59,7 @@
     <dependency>
       <groupId>org.gwtproject.layout</groupId>
       <artifactId>gwt-layout</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>HEAD-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
